Updated settings again.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,9 +15,5 @@
   "editor.tabSize": 2,
   "C_Cpp.clang_format_sortIncludes": true,
   "C_Cpp.default.intelliSenseMode": "gcc-x86",
-  "C_Cpp.loggingLevel": "Warning",
-  "files.associations": {
-    "mre.h": "c"
-  },
-  "cSpell.words": []
+  "C_Cpp.loggingLevel": "Warning"
 }
