Tweaked CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ project(${MOD_NAME}
   LANGUAGES C)
 
 # Set cmake defaults.
+set(CPACK_GENERATOR "TXZ")
 set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
   set(CMAKE_INSTALL_PREFIX "lib${MOD_NAME}-${MOD_VERSION}"
