--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
   // VSCode settings.
   "editor.formatOnType": true,
   "editor.formatOnSave": true,
-  "editor.formatOnPaste": true,
+  "editor.formatOnPaste": false,
   "editor.detectIndentation": false,
   "editor.tabSize": 2,
   "C_Cpp.clang_format_sortIncludes": true,
