--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,9 @@
     "C_Cpp.clang_format_sortIncludes": true,
     "C_Cpp.default.compilerPath": "/usr/bin/gcc",
     "C_Cpp.default.intelliSenseMode": "gcc-x86",
-    "C_Cpp.loggingLevel": "Warning"
+    "C_Cpp.loggingLevel": "Warning",
+    "files.associations": {
+        "*.h": "c",
+    },
+    "C_Cpp.autoAddFileAssociations": false
 }
