--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,28 +3,33 @@ cmake_minimum_required(VERSION 3.19)
 # Update this as you add new source files.
 set(SRC
     src/moddef.c
-    )
+)
 
 # Read project metadata from ModInfo.json.
 file(READ "${CMAKE_CURRENT_SOURCE_DIR}/ModInfo.json" MOD_INFO)
 string(JSON MOD_NAME
-    GET ${MOD_INFO} name)
+    GET ${MOD_INFO} name
+)
 string(JSON MOD_VERSION
-    GET ${MOD_INFO} version)
+    GET ${MOD_INFO} version
+)
 string(JSON MOD_DESCRIPTION
-    GET ${MOD_INFO} description)
+    GET ${MOD_INFO} description
+)
 
 # Define project.
 project(${MOD_NAME}
     VERSION ${MOD_VERSION}
     DESCRIPTION ${MOD_DESCRIPTION}
-    LANGUAGES C)
+    LANGUAGES C
+)
 
 # Set cmake defaults.
 set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
     set(CMAKE_INSTALL_PREFIX "lib${MOD_NAME}-${MOD_VERSION}"
-        CACHE PATH "..." FORCE)
+        CACHE PATH "..." FORCE
+    )
 endif()
 
 # Include CPack.
@@ -43,23 +48,24 @@ include("$ENV{AER_GAMEDIR}/${AERMRE_SCRIPT_REL}")
 add_library(${MOD_NAME} SHARED ${SRC})
 generate_export_header(${MOD_NAME}
     BASE_NAME MOD
-    EXPORT_FILE_NAME include/export.h)
+    EXPORT_FILE_NAME include/export.h
+)
 set_target_properties(${MOD_NAME} PROPERTIES
     C_VISIBILITY_PRESET hidden
-    CMAKE_VISIBILITY_INLINES_HIDDEN TRUE)
+    CMAKE_VISIBILITY_INLINES_HIDDEN TRUE
+)
 target_include_directories(${MOD_NAME}
-    PRIVATE include
-    PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/include")
+    PRIVATE include "${CMAKE_CURRENT_BINARY_DIR}/include"
+)
 target_compile_options(${MOD_NAME}
-    PRIVATE -m32
-    PRIVATE -Wall
-    PRIVATE -Wextra
-    PRIVATE -Werror)
+    PRIVATE -m32 -Wall -Wextra -Werror -Wfatal-errors
+)
 target_link_options(${MOD_NAME}
-    PRIVATE -m32
-    PRIVATE -rdynamic)
+    PRIVATE -m32 -rdynamic
+)
 target_link_libraries(${MOD_NAME}
-    PRIVATE AERMRE::aermre)
+    PRIVATE AERMRE::aermre
+)
 
 # Add installation target.
 install(TARGETS
