--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -83,10 +83,26 @@
         },
         {
             "label": "Prepare Launch",
+            "type": "shell",
+            "command": [
+                "declare EXTRA_MODS=\"${EXTRA_MOD_NAMES//,/ }\" && ",
+                "declare EXTRA_MOD_LIST=\"$(for MOD in $EXTRA_MODS; do echo -n \"\\\"$MOD\\\",\"; done)\" && ",
+                "mkdir -p ${workspaceRoot}/build/extralib ${env:AER_GAMEDIR}/assets/mod ${env:AER_GAMEDIR}/aer && ",
+                "for MOD in $EXTRA_MODS; ",
+                "do ln -sft \"${workspaceRoot}/build/extralib/\" $(find ${env:AER_GAMEDIR}/aer/mods/$MOD/lib -type f,l) && ",
+                "ln -sfT \"${env:AER_GAMEDIR}/aer/mods/$MOD/assets\" \"${env:AER_GAMEDIR}/assets/mod/$MOD\"; done && ",
+                "ln -sfT ${workspaceRoot}/assets ${env:AER_GAMEDIR}/assets/mod/$MOD_NAME && ",
+                "sed -e \"s/\\${modName}/$MOD_NAME/g\" -e \"s/\\${extraModNames}/$EXTRA_MOD_LIST/g\" ",
+                "${workspaceRoot}/.vscode/aer_config.toml.in >${env:AER_GAMEDIR}/aer/conf.toml",
+            ],
+            "options": {
+                "env": {
+                    "MOD_NAME": "${config:mdk.modName}",
+                    "EXTRA_MOD_NAMES": "${config:mdk.extraModNames}",
+                }
+            },
             "dependsOn": [
-                "Build Debug",
-                "Link Assets",
-                "Create AER Configuration"
+                "Build Debug"
             ],
             "presentation": {
                 "echo": true,
@@ -99,119 +115,8 @@
         },
         {
             "label": "Clean Launch",
-            "dependsOn": [
-                "Clean Assets Directory",
-                "Clean AER Configuration"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "never",
-                "focus": false,
-                "panel": "shared",
-                "showReuseMessage": true,
-                "clear": false
-            }
-        },
-        {
-            "label": "Ensure AER Directory",
             "type": "shell",
-            "command": "mkdir",
-            "args": [
-                "-p",
-                "${env:AER_GAMEDIR}/aer"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "never",
-                "focus": false,
-                "panel": "shared",
-                "showReuseMessage": true,
-                "clear": false
-            }
-        },
-        {
-            "label": "Ensure Assets Directory",
-            "type": "shell",
-            "command": "mkdir",
-            "args": [
-                "-p",
-                "${env:AER_GAMEDIR}/assets/mod"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "never",
-                "focus": false,
-                "panel": "shared",
-                "showReuseMessage": true,
-                "clear": false
-            }
-        },
-        {
-            "label": "Clean Assets Directory",
-            "type": "shell",
-            "command": "rm",
-            "args": [
-                "-rf",
-                "${env:AER_GAMEDIR}/assets/mod"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "never",
-                "focus": false,
-                "panel": "shared",
-                "showReuseMessage": true,
-                "clear": false
-            }
-        },
-        {
-            "label": "Link Assets",
-            "type": "shell",
-            "command": "ln",
-            "args": [
-                "-sfT",
-                "${workspaceRoot}/assets",
-                "${env:AER_GAMEDIR}/assets/mod/${config:mdk.modName}"
-            ],
-            "dependsOn": [
-                "Ensure Assets Directory"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "never",
-                "focus": false,
-                "panel": "shared",
-                "showReuseMessage": true,
-                "clear": false
-            }
-        },
-        {
-            "label": "Create AER Configuration",
-            "type": "shell",
-            "command": "echo",
-            "args": [
-                "mre.mods = [${config:mdk.launchMods}]",
-                ">${env:AER_GAMEDIR}/aer/conf.toml"
-            ],
-            "dependsOn": [
-                "Ensure AER Directory"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "never",
-                "focus": false,
-                "panel": "shared",
-                "showReuseMessage": true,
-                "clear": false
-            }
-        },
-        {
-            "label": "Clean AER Configuration",
-            "type": "shell",
-            "command": "rm",
-            "args": [
-                "-f",
-                "${env:AER_GAMEDIR}/aer/conf.toml"
-            ],
+            "command": "rm -rf ${workspaceRoot}/build/extralib ${env:AER_GAMEDIR}/assets/mod ${env:AER_GAMEDIR}/aer/conf.toml",
             "presentation": {
                 "echo": true,
                 "reveal": "never",
