--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "environment": [
                 {
                     "name": "LD_LIBRARY_PATH",
-                    "value": "${workspaceRoot}/build/debug:./aer/mre/lib:./lib:${env:LD_LIBRARY_PATH}"
+                    "value": "${workspaceRoot}/build/debug:${workspaceRoot}/build/extralib:./aer/mre/lib:./lib:${env:LD_LIBRARY_PATH}"
                 }
             ],
             "externalConsole": false,
