--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,12 @@
     },
     "C_Cpp.autoAddFileAssociations": false,
     "cSpell.words": [
-        "aererr"
+        "aer",
+        "aererr",
+        "aerman",
+        "aermdk",
+        "gamedir",
+        "moddef",
+        "modpack"
     ]
 }
