Reworked mod configuration to support cmake 3.12.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "C_Cpp.autoAddFileAssociations": false,
     "files.associations": {
         "*.h": "c",
+        "*.json.in": "json",
         "*.toml.in": "toml",
     },
     "[toml]": {
