--- a/ModInfo.json.in
+++ b/ModInfo.json.in
@@ -3,7 +3,9 @@
     "version": "@PROJECT_VERSION@",
     "description": "@PROJECT_DESCRIPTION@",
     "homepage": "@PROJECT_HOMEPAGE_URL@",
-    "minimum_mre_version": "",
-    "authors": [],
+    "minimum_mre_version": "@PROJECT_MINIMUM_MRE_VERSION@",
+    "authors": [
+        "@PROJECT_AUTHORS_JSON@"
+    ],
     "configuration": []
 }
