Fixed bug in CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,9 +93,9 @@ if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/assets")
         DESTINATION "."
     )
 endif()
-if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/ACKNOWLEGMENTS")
+if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/ACKNOWLEDGMENTS")
     install(DIRECTORY
-        "${CMAKE_CURRENT_SOURCE_DIR}/ACKNOWLEGMENTS"
+        "${CMAKE_CURRENT_SOURCE_DIR}/ACKNOWLEDGMENTS"
         DESTINATION "."
     )
 endif()
