Decreased release optimization level.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ list(JOIN PROJECT_AUTHORS "\",\"" PROJECT_AUTHORS_JSON)
 
 # Set cmake defaults.
 set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
+set(CMAKE_C_FLAGS_RELEASE "-O2 -DNDEBUG")
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
     set(CMAKE_INSTALL_PREFIX "lib${PROJECT_NAME}-${PROJECT_VERSION}"
         CACHE PATH "..." FORCE
