--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -87,13 +87,13 @@
             "command": [
                 "declare EXTRA_MODS=\"${EXTRA_MOD_NAMES//,/ }\" && ",
                 "declare EXTRA_MOD_LIST=\"$(for MOD in $EXTRA_MODS; do echo -n \"\\\"$MOD\\\",\"; done)\" && ",
-                "mkdir -p ${workspaceRoot}/build/extralib ${env:AER_GAMEDIR}/assets/mod ${env:AER_GAMEDIR}/aer && ",
+                "mkdir -p \"${workspaceRoot}/build/extralib\" \"${env:AER_GAMEDIR}/assets/mod\" \"${env:AER_GAMEDIR}/aer\" && ",
                 "for MOD in $EXTRA_MODS; ",
-                "do ln -sft \"${workspaceRoot}/build/extralib/\" $(find ${env:AER_GAMEDIR}/aer/mods/$MOD/lib -type f,l) && ",
+                "do ln -sft \"${workspaceRoot}/build/extralib/\" $(find \"${env:AER_GAMEDIR}/aer/mods/$MOD/lib\" -type f,l) && ",
                 "ln -sfT \"${env:AER_GAMEDIR}/aer/mods/$MOD/assets\" \"${env:AER_GAMEDIR}/assets/mod/$MOD\"; done && ",
-                "ln -sfT ${workspaceRoot}/assets ${env:AER_GAMEDIR}/assets/mod/$MOD_NAME && ",
+                "ln -sfT \"${workspaceRoot}/assets\" \"${env:AER_GAMEDIR}/assets/mod/$MOD_NAME\" && ",
                 "sed -e \"s/\\${modName}/$MOD_NAME/g\" -e \"s/\\${extraModNames}/$EXTRA_MOD_LIST/g\" ",
-                "${workspaceRoot}/.vscode/aer_config.toml.in >${env:AER_GAMEDIR}/aer/conf.toml",
+                "\"${workspaceRoot}/.vscode/aer_config.toml.in\" >\"${env:AER_GAMEDIR}/aer/conf.toml\"",
             ],
             "options": {
                 "env": {
